# DataLake-Playground

./: README.md  all_the_apps.sh  docker-compose.yaml
data/: metadata.json  numbers-1.csv  numbers-1.json
dbeaver_conf/queries/Trino-Iceberg-Tutorial/: DDL.sql  DML.sql  DQL.sql  OTHER_FILES_TYPES.sql  Partitions.sql  PostgresDBQuery.sql  TablesFiles.sql  catalog.sql  cross-database-query.sql  dbt_ingestion.sql  example_http.sql  trino-system-tables.sql
dbt/: pyproject.toml
dbt/TrinoIngestionDbt/: profiles.yml
dbt/TrinoIngestionDbt/models/: sources.yml
dbt/TrinoIngestionDbt/models/data_ingestion/: test_table_postgres.sql
jupyter/: Dockerfile
jupyter/notebooks/: Iceberg.ipynb  Spark.ipynb
trino/trino_connections/: http.properties  local_http.properties
trino_connections/: iceberg_datalake.properties
